--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Ducci Food</title>
         <link rel="stylesheet" href="https://unpkg.com/boxicons@latest/css/boxicons.min.css">
-        <link rel="stylesheet" href="Website2.css">
+        <link rel="stylesheet" href="index1.css">
         <link rel="icon" type="icon" href="LOGO2.png">
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
         <link rel="stylesheet" href="mobile.css">
@@ -28,14 +28,20 @@
                 
             </div>
             <a href=""></a>
-            <button class="btn">Login</button>
+            <button class="btn" id="loginBtn">Login</button>
+            <div class="newtons-cradle" id="newtonsCradle">
+                <div class="newtons-cradle__dot"></div>
+                <div class="newtons-cradle__dot"></div>
+                <div class="newtons-cradle__dot"></div>
+                <div class="newtons-cradle__dot"></div>
+              </div>
         </header>
         <section class="home-section" id="Dishes">
             <div class="text-content">
                 <h5>Most Ordered in Christmast season</h5>
                 <h2>Ducci Burger</h2>
                 <p>Elevate your taste journey with our artisanal D-Burger! Crafted with precision, our prime patty, fresh produce, and secret sauce unite in a symphony of flavors, delivering a unique culinary experience.</p>
-                <button class="btn">Order Now</button>
+                <button class="btn" id="card2">Order Now</button>
                 <button class="btn btn-explore">Explore More</button>
             </div>
             <div class="image-section">
@@ -240,6 +246,7 @@
                 // Chuyển hướng đến trang mới (thay đổi "new_page.html" thành trang bạn muốn chuyển hướng)
                 window.location.href = "Thanhtoan.html";
             };
+            
         </script>
 
         <script type="module" src="main2.js"></script>
